unpackaged/main/default/objects/SKU__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SKUs</relationshipLabel>
    <relationshipName>SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>