unpackaged/main/default/objects/SKU__c/fields/Dummy_SKU_used__c.field-meta.xml
<CustomField>
    <fullName>Dummy_SKU_used__c</fullName>
    <label>Dummy SKU used?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>