unpackaged/main/default/objects/SKU__c/fields/PO_Number_SKU__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_SKU__c</fullName>
    <formula>Purchase_Order__r.PO_Number__c</formula>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>