unpackaged/main/default/objects/SKU__c/fields/SAP_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Line_Number__c</fullName>
    <label>SAP Line Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>