unpackaged/main/default/objects/SKU__c/validationRules/Other_Issue_Required_on_SKU_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Issue_Required_on_SKU_Issue</fullName>
    <active>true</active>
    <description>If SKU Issue is "Other", this requires "Other Issue" to be populated.</description>
    <errorConditionFormula>AND (
 INCLUDES( SKU_Issue__c , "Other"),
 ISBLANK( Other_Issue__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Issue__c</errorDisplayField>
    <errorMessage>This field is required.</errorMessage>
</ValidationRule>